<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="64dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="108dp"
            android:src="@drawable/auralert_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp" />

        <!--  Device ID Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="6dp">

            <EditText
                android:id="@+id/device_id_edit_text"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:hint="@string/device_id"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="6dp">

            <!-- Phone Label -->
            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="6dp">

            <!-- Msg Label -->
            <EditText
                android:id="@+id/msg_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg"
                android:inputType="textShortMessage"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="3"
                android:text="@string/threshold"
                android:textColor="@android:color/white"
                android:textSize="17.5sp" />

            <Button
                android:id="@+id/low_button"
                android:layout_width="0dp"
                android:background="@null"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/low" />

            <Button
                android:id="@+id/high_button"
                android:background="@null"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/high" />

        </LinearLayout>

        <!-- Registration Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="22dp"
            android:padding="14dp"
            android:text="@string/register" />

    </LinearLayout>
</ScrollView>